--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-  	<title>k1px0r page</title>
+  	<title>k1pz0r page</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>REALLY MY PAGE?</h1>
     Hello world!
-    <p>Second commit</p>
   </body>
 </html>
